namespace Twizzar.Design.Ui.Interfaces.Parser.SyntaxTree
{
    /// <summary>
    /// The token for a constructor.
    /// </summary>
    public interface IViCtorToken : IViToken
    {
    }
}