namespace Twizzar.Design.Ui.Interfaces.Parser.SyntaxTree
{
    /// <summary>
    /// A keyword token like unique, null or not_specified.
    /// </summary>
    public interface IViKeywordToken : IViToken
    {
    }
}