namespace Twizzar.Design.Ui.Interfaces.Parser.SyntaxTree.Keywords
{
    /// <summary>
    /// A null keyword token.
    /// </summary>
    public interface IViNullKeywordToken : IViKeywordToken
    {
    }
}