namespace Twizzar.Design.Ui.Interfaces.Parser.SyntaxTree.Keywords
{
    /// <summary>
    /// An unique keyword token.
    /// </summary>
    public interface IViUniqueKeywordToken : IViKeywordToken
    {
    }
}